# TrainScheduling-Server

./: .gitignore  README.md  log.txt
Client/: CMakeLists.txt  Client  client.c  log.txt  main.cpp
Client/.qt/: QtDeploySupport.cmake
Client/utils/: sig_handlers.h
cfrcalatori/: .gitignore  CMakeLists.txt  README.md  main.cpp  path  qtcfrcalatori  sample_data.xml
cfrcalatori/.qt/: QtDeploySupport.cmake
cfrcalatori/ClientController/: client_controller.cpp  client_controller.h
cfrcalatori/ClientThreadFactory/: thread_factory.cpp  thread_factory.h
cfrcalatori/CommandControl/CommandControl/: command_ABC.h  command_factory.cpp  command_factory.h  commands.cpp  commands.h
cfrcalatori/CommandControl/CommandControlManager/: command_control_manager.cpp  command_control_manager.h
cfrcalatori/Requests/RequestsController/: requests_controller.cpp  requests_controller.h
cfrcalatori/XmlController/: xmlcontrollerr.cpp  xmlcontrollerr.h
cfrcalatori/XmlController/data/: sample_data.xml
cfrcalatori/cfrcalatori/: CMakeLists.txt  doc.tex  log.txt  main.cpp  main.h
docs/: doc.tex  log.txt
